Fixed the Hamburger icon not shown error, wrong NavigationView height error, items not colorized when selected error and Toolbar cosmetics.

--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -4,8 +4,8 @@
 	>
 	<gradient
 		android:angle="135"
-		android:endColor="@color/color_primary"
-		android:startColor="@color/colorAccent"
+		android:endColor="@color/primaryDarkColor"
+		android:startColor="@color/primaryLightColor"
 		android:type="linear"
 		/>
 </shape>
