--- a/app/src/main/res/drawable/round_button_background.xml
+++ b/app/src/main/res/drawable/round_button_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:color="@color/rippleColorAccent"
+	android:color="@color/rippleSecondaryColor"
 	>
 	<item>
 		<shape android:shape="oval">
@@ -12,7 +12,7 @@
 		<shape android:shape="oval">
 			<stroke
 				android:width="1.13dp"
-				android:color="@color/color_primary"
+				android:color="@color/primaryColor"
 				/>
 			<padding
 				android:bottom="13dp"
