--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,32 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
+	android:layout_height="match_parent"
 	android:background="@drawable/side_nav_bar"
-	android:gravity="bottom"
-	android:orientation="vertical"
 	android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
 	>
 	
 	<ImageView
+		android:id="@+id/navigation_header"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_marginTop="@dimen/margin_medium"
 		android:contentDescription="@string/navigation_header"
+		app:layout_constraintBottom_toTopOf="@id/username"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias=".13"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
 		app:srcCompat="@mipmap/ic_launcher_round"
 		/>
 	
 	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:text="@string/android_studio"
-		android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-		/>
-	
-	<TextView
+		android:id="@+id/username"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/android_studio_email"
+		android:layout_marginTop="@dimen/margin_medium"
+		android:layout_marginBottom="@dimen/margin_large"
+		android:text="@string/username"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="@id/navigation_header"
+		app:layout_constraintHorizontal_bias=".13"
+		app:layout_constraintStart_toStartOf="@id/navigation_header"
+		app:layout_constraintTop_toBottomOf="@id/navigation_header"
 		/>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
