--- a/app/src/main/res/navigation/login_navigation_graph.xml
+++ b/app/src/main/res/navigation/login_navigation_graph.xml
@@ -4,7 +4,7 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:id="@+id/nav_graph"
-	app:startDestination="@id/mainFragment"
+	app:startDestination="@id/loginFragment"
 	>
 	<fragment
 		android:id="@+id/loginFragment"
@@ -19,9 +19,7 @@
 			app:exitAnim="@anim/slide_out_to_left"
 			app:popEnterAnim="@anim/slide_in_from_left"
 			app:popExitAnim="@anim/slide_out_to_right"
-			>
-		</action>
-		
+			/>
 		<action
 			android:id="@+id/to_mainFragment"
 			app:destination="@id/mainFragment"
@@ -29,6 +27,8 @@
 			app:exitAnim="@anim/slide_out_to_left"
 			app:popEnterAnim="@anim/slide_in_from_left"
 			app:popExitAnim="@anim/slide_out_to_right"
+			app:popUpTo="@id/loginFragment"
+			app:popUpToInclusive="true"
 			/>
 		<action
 			android:id="@+id/to_forgotLoginFragment"
@@ -53,6 +53,8 @@
 			app:exitAnim="@anim/slide_out_to_left"
 			app:popEnterAnim="@anim/slide_in_from_left"
 			app:popExitAnim="@anim/slide_out_to_right"
+			app:popUpTo="@id/loginFragment"
+			app:popUpToInclusive="true"
 			/>
 	</fragment>
 	<fragment
@@ -74,6 +76,8 @@
 			app:exitAnim="@anim/slide_out_to_left"
 			app:popEnterAnim="@anim/slide_in_from_left"
 			app:popExitAnim="@anim/slide_out_to_right"
+			app:popUpTo="@id/loginFragment"
+			app:popUpToInclusive="true"
 			/>
 	</fragment>
 	<fragment
@@ -89,6 +93,8 @@
 			app:exitAnim="@anim/slide_out_to_left"
 			app:popEnterAnim="@anim/slide_in_from_left"
 			app:popExitAnim="@anim/slide_out_to_right"
+			app:popUpTo="@id/loginFragment"
+			app:popUpToInclusive="true"
 			/>
 	</fragment>
 	<fragment
@@ -110,6 +116,8 @@
 			app:exitAnim="@anim/slide_out_to_left"
 			app:popEnterAnim="@anim/slide_in_from_left"
 			app:popExitAnim="@anim/slide_out_to_right"
+			app:popUpTo="@id/loginFragment"
+			app:popUpToInclusive="true"
 			/>
 	</fragment>
 </navigation>
