--- a/app/src/main/res/layout/fragment_google_signup.xml
+++ b/app/src/main/res/layout/fragment_google_signup.xml
@@ -18,7 +18,7 @@
 		>
 		
 		<ImageView
-			android:id="@+id/loading_spinner"
+			android:id="@+id/progress_bar"
 			android:layout_width="96dp"
 			android:layout_height="96dp"
 			android:contentDescription="@string/loading"
