--- a/app/src/main/res/layout/fragment_subscribe.xml
+++ b/app/src/main/res/layout/fragment_subscribe.xml
@@ -2,7 +2,6 @@
 <layout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
 	>
 	
 	<data>
@@ -12,51 +11,54 @@
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		tools:context=".subscribe.SubscribeFragment"
 		>
 		
-		<ImageView
-			android:id="@+id/loading_spinner"
+		<ProgressBar
+			android:id="@+id/progress_bar"
 			android:layout_width="96dp"
 			android:layout_height="96dp"
 			android:contentDescription="@string/loading"
-			android:src="@drawable/animated_loading_circle_red_black"
-			android:visibility="gone"
+			android:indeterminateDrawable="@drawable/animated_loading_circle_red_black"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
 			/>
 		
-		<androidx.constraintlayout.widget.ConstraintLayout
-			android:id="@+id/content"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			app:layout_constraintBottom_toBottomOf="parent"
+		<androidx.viewpager2.widget.ViewPager2
+			android:id="@+id/view_pager_2"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			app:layout_constraintBottom_toTopOf="@id/tab_layout"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
-			>
-			
-			<androidx.viewpager2.widget.ViewPager2
-				android:id="@+id/view_pager_2"
-				android:layout_width="0dp"
-				android:layout_height="0dp"
-				app:layout_constraintBottom_toTopOf="@id/tab_layout"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toTopOf="parent"
-				/>
-			
-			<com.google.android.material.tabs.TabLayout
-				android:id="@+id/tab_layout"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintStart_toStartOf="parent"
-				app:tabMode="auto"
-				/>
-		</androidx.constraintlayout.widget.ConstraintLayout>
+			/>
+		
+		<com.google.android.material.tabs.TabLayout
+			android:id="@+id/tab_layout"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:tabMode="auto"
+			/>
+		
+		<androidx.constraintlayout.widget.Group
+			android:id="@+id/loading"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:visibility="gone"
+			app:constraint_referenced_ids="progress_bar"
+			/>
+		
+		<androidx.constraintlayout.widget.Group
+			android:id="@+id/content"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:visibility="visible"
+			app:constraint_referenced_ids="view_pager_2,tab_layout"
+			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
